--- a/src/app/home-prestador/home-prestador.page.scss
+++ b/src/app/home-prestador/home-prestador.page.scss
@@ -216,3 +216,13 @@ ion-content.no-scroll {
     font-weight: bold;
     cursor: pointer;
   }
+  .centralizado-tela-botao {
+    display: block;
+    margin: 12px auto;
+    text-align: center;
+  }
+  .notificacao-verde {
+    color: #0e5732; /* Mesma cor da palavra 'Leilão' */
+  }
+  
+  
